2005-05-07  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: use C++ 'using' construction only for C++. Thanks Gary.

	* build/Makefiles/gmake/lib/gcc.mak: option for libname for Darwin.

	* build/Makefiles/gmake/app/mwccnlm.mak: build for Novell NetWare 5
	with MetroWerks 7 and 8 compilers.

	* build/Makefiles/gmake/lib/mwccnlm.mak: ditto

	* build/lib/mwccnlm.mak: ditto

	* build/Makefiles/gmake/mwccnlm.mak: ditto

	* build/Makefiles/gmake/netware/extern.mak: ditto

	* build/Makefiles/gmake/netware/lib.mak, sys.mak: ditto

	* src/_stdio_file.h, num_get_float.cpp, num_put_float.cpp: ditto

	* stlport/cstdio, cwchar, cwctype, stdio.h, wchar.h: ditto

	* stlport/config/stl_mwerks.h: ditto

	* stlport/stl/_config.h, _fstream.h, _hashtable.c, _sstream.c: ditto
	
	* stlport/stl/_threads.h, c_locale.h, char_traits.h: ditto

	* build/Makefiles/gmake/sysid.mak: treat mwccnlm as cross-compiler, set correct
	TARGET_OS and OS-related macros.

	* stlport/stl/_valarray.h: remove exhaustive this->.

2005-05-04  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Change configuration for MSVC .Net 2003 and 2005
	that seems to have a bug in the namespace management thanks .
	
	* stlport/stdlib.h: Add errno.h inclusion from this file for gcc mingw as this
	compiler version do define errno macro in stdlib.h as MSVC do.
	
2005-05-03  Francois Dumont  <dums@stlport...>

	* stlport/stl_user_config.h, stl/_site_config.h, config/stl_gcc.h, _prolog.h,
	_epilog.h: Use strict Ansi C comments (/**/) for headers accessible thought 
	the STLport C headers.
	
	* stlport/C headers: Cleaned from C++ style comments.

2005-05-02  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/vc-common.mak: Restore of LDFLAGS_A_REL introduce the
	2004-10-30 and lost the 2005-04-16, it avoids warning due to use of the whole
	program optimization with VC.Net 2003 and 2005.
	
	* stlport/stl/_string_io.c: Modification of the basic_string i/o operators in the