@@ -400,7 +400,8 @@ void LocaleTest::locale_init_problem()
 
 void LocaleTest::_locale_init_problem( const locale& loc, const ref_locale&)
 {
-#  if !defined (__FreeBSD__) || !defined(__GNUC__) || ((__GNUC__ > 3) || ((__GNUC__ == 3) && (__GNUC_MINOR__> 3)))
+#  if !defined (__APPLE__) && !defined (__FreeBSD__) || \
+      !defined(__GNUC__) || ((__GNUC__ > 3) || ((__GNUC__ == 3) && (__GNUC_MINOR__> 3)))
   typedef codecvt<char,char,mbstate_t> my_facet;
 #  else
 // std::mbstate_t required for gcc 3.3.2 on FreeBSD...
