@@ -1,3 +1,13 @@
+2005-05-07  Francois Dumont  <dums@stlport...>
+
+	* stlport/config/stl_gcc.h: Patch from John Smith for Mac OS X support.
+	
+	* test/unit/locale_test.cpp: Idem previous.
+
+	* build/Makefiles/gmake/cygming/lib.mak, sys.mak: Import lib extension change from .lib to
+	.dll.a for Mingw like under Cygwin. ld linker looks for .dll.a before .lib, avoid
+	conflict with Cygwin lib.
+
 2005-05-07  Petr Ovtchenkov  <ptr@island...>
 
 	* stlport/errno.h: use C++ 'using' construction only for C++. Thanks Gary.
